API update, "manual" document attributes deactivation, API test routine creation, some bug fixes
